k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chefgpt
  labels:
    name: chefgpt
    environment: production
